Adds MusicGroup